- Checks for BlueStacks before clicking - Bug fix

--- a/App.config
+++ b/App.config
@@ -43,6 +43,9 @@
             <setting name="ResumeAfter" serializeAs="String">
                 <value>666000</value>
             </setting>
+            <setting name="CheckBlueStackAppPlayer" serializeAs="String">
+                <value>True</value>
+            </setting>
         </GC_Clicker.Properties.Settings>
     </userSettings>
 </configuration>
