--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="ResumeAfter" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">666000</Value>
     </Setting>
+    <Setting Name="CheckBlueStackAppPlayer" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
